# logomotion

./: .coveragerc  .env  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
documentation/: adding_command_structures.md  architecture.md  handover.md  instructions.md  logo.md  logo_finnish.md  template_usage.md
logo/: binops.logo  case_insensitive.logo  expr.logo  for.logo  for1.logo  if.logo  move.logo  move_error.logo  relops.logo  repeater.logo  show.logo  show_error.logo  test.logo  vtest.logo
logomotion_gradle/: .gitignore  README.md  build.gradle  config.gradle  settings.gradle
src/: AppLibrary.py  csa.py  hello.py  main.py
src/analysis/: evaluation.py
src/entities/: error_handler.py  error_info.py  error_values.py  logotypes.py  preconfigured_functions.py  symbol.py  symbol_table.py  symbol_tables.py  type.py
src/entities/ast/: block.py  (+8 more)
src/error_messages/: .gitignore  error_messages.json  lexer_errors.json  parser_errors.json
src/errors/: .gitignore  eng_errors.json  fin_errors.json
src/language/: error_messages.json
src/lexer/: lexer.py  token_types.py
src/parser/: ast.py  command.py  expression.py  globals.py  parser.py  preparser.py  value.py
src/tests/: code_generation_test.py  error_test.py  evaluation_test.py  functions_test.py  hello_test.py  lexer_test.py  parser_test.py  premade_funcs_test.py  symbol_table_test.py  symbol_test.py  type_test.py
src/utils/: code_generator.py  console_io.py  error_handler.py  error_handler_mock.py  logger.py  lowercase_converter.py  preconf_code_generator.py
(+33 files in other folders)
